# chip8

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  emulator.c
docs/: CMakeLists.txt  mainpage.md
include/chip8/: chip8.h  dispatcher.h
src/: CMakeLists.txt  chip8.c  dispatcher.c
tests/: CMakeLists.txt  chip8_test.c
